--- a/blogpost.html
+++ b/blogpost.html
@@ -10,7 +10,7 @@
 <body>
     
     <h1>Aqui va el titulo de nuestro Blog</h1>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magnam numquam est perferendis nobis. Vel ipsum, magni atque molestiae ad ipsam expedita id accusamus voluptatem, aliquid temporibus officia beatae voluptates unde.</p>
+    <p class="parrafo">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magnam numquam est perferendis nobis. Vel ipsum, magni atque molestiae ad ipsam expedita id accusamus voluptatem, aliquid temporibus officia beatae voluptates unde.</p>
 
 </body>
 </html>
