--- a/blogpost.html
+++ b/blogpost.html
@@ -8,9 +8,10 @@
     <title>Document</title>
 </head>
 <body>
-    
-    <h1>Aqui va el titulo de nuestro Blog</h1>
-    <p class="parrafo">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magnam numquam est perferendis nobis. Vel ipsum, magni atque molestiae ad ipsam expedita id accusamus voluptatem, aliquid temporibus officia beatae voluptates unde.</p>
+    <div class="contenedor__titulo">
+        <h1>Aqui va el titulo de nuestro Blog</h1>
+        <p class="parrafo">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magnam numquam est perferendis nobis. Vel ipsum, magni atque molestiae ad ipsam expedita id accusamus voluptatem, aliquid temporibus officia beatae voluptates unde.</p>
+    </div>
 
 </body>
 </html>
