--- a/blogpost.html
+++ b/blogpost.html
@@ -11,6 +11,7 @@
     <div class="contenedor__titulo">
         <h1>Aqui va el titulo de nuestro Blog</h1>
         <p class="parrafo">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magnam numquam est perferendis nobis. Vel ipsum, magni atque molestiae ad ipsam expedita id accusamus voluptatem, aliquid temporibus officia beatae voluptates unde.</p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquam vitae odit id ullam numquam! Reprehenderit harum ipsum sunt? Unde provident eaque rem neque asperiores porro veniam dolore consectetur aliquam dolores.</p>
     </div>
 
 </body>
