Cambio de titulo desde GitHub

--- a/blogpost.html
+++ b/blogpost.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="contenedor__titulo">
-        <div class="contenedor__cabecera">HyperBlog</div>
+        <div class="contenedor__cabecera">Bienvenido al Blog</div>
         <h1>Aqui va el titulo de nuestro Blog</h1>
         <p class="parrafo">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magnam numquam est perferendis nobis. Vel ipsum, magni atque molestiae ad ipsam expedita id accusamus voluptatem, aliquid temporibus officia beatae voluptates unde.</p>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquam vitae odit id ullam numquam! Reprehenderit harum ipsum sunt? Unde provident eaque rem neque asperiores porro veniam dolore consectetur aliquam dolores.</p>
