Cambio de titulo y lenguaje

--- a/blogpost.html
+++ b/blogpost.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="contenedor__titulo">
-        <div class="contenedor__cabecera">Bienvenido al Blog 2.0</div>
+        <div class="contenedor__cabecera">Bienvenido al Blog 2.0 el blog del futuro</div>
         <img src="./img/barca.png" alt="logo" class="logo">
         <h1>Aqu&iacute; va el t&iacute;tulo de nuestro Blog</h1>
         <p class="parrafo">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magnam numquam est perferendis nobis. Vel ipsum, magni atque molestiae ad ipsam expedita id accusamus voluptatem, aliquid temporibus officia beatae voluptates unde.</p>
