Agregue una imagen al blog

--- a/blogpost.html
+++ b/blogpost.html
@@ -14,6 +14,7 @@
         <h1>Aqu&iacute; va el t&iacute;tulo de nuestro Blog</h1>
         <p class="parrafo">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magnam numquam est perferendis nobis. Vel ipsum, magni atque molestiae ad ipsam expedita id accusamus voluptatem, aliquid temporibus officia beatae voluptates unde.</p>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquam vitae odit id ullam numquam! Reprehenderit harum ipsum sunt? Unde provident eaque rem neque asperiores porro veniam dolore consectetur aliquam dolores.</p>
+        <p><img src="./img/1.jpg" alt="img1"></p>
     </div>
 
     <footer class="footer">
